# ImageProof

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml  start-web.cmd  start-web.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  engine.rs  hybrid.rs  lib.rs  model.rs  physical.rs  semantic.rs  signal.rs
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: lib.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  EXECUTION_PLAN.md  FEEDBACK_SYSTEM.md  OPERATIONS.md  SECURITY.md
web/: index.html  package-lock.json  package.json  vercel.json
web/pkg/: imageproof_wasm_bindings.d.ts  imageproof_wasm_bindings.js  imageproof_wasm_bindings_bg.wasm  imageproof_wasm_bindings_bg.wasm.d.ts  package.json
web/src/: main.js  styles.css  worker.js
