[workspace]
members = [
  "crates/core",
  "crates/wasm-bindings",
  "crates/cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ImageProof Team"]
license = "UNLICENSED"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rustfft = "6"
toml = "0.8"
